--- a/cozweb/templates/index.html
+++ b/cozweb/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Devices {% endblock %}
+{% set view = "Devices" %}
+
 
 {% block content %}
   {% if devices %}
