Make toggle links user-friendly with some js

--- a/cozweb/templates/index.html
+++ b/cozweb/templates/index.html
@@ -11,7 +11,7 @@
         <a href='/device/{{id}}'>
           {{device['name']}}
         </a>
-        <a href='/device/{{id}}/toggle'>
+        <a href="/device/{{id}}/toggle" class="clickable">
           T
         </a>
       </li>
