--- a/cozweb/templates/base.html
+++ b/cozweb/templates/base.html
@@ -6,6 +6,7 @@
   {% endblock %}
   <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
   <header>
@@ -22,5 +23,6 @@
       <a href="https://github.com/Artanicus/cozweb">CozWeb</a>
     {% endblock %}
   </div>
+  <script src="{{url_for('static', filename='js/clickable.js')}}"></script>
 </body>
 </html>
